changed value for restaurant name

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
      background-image: url('https://images.unsplash.com/photo-1519893578517-3252b77e8fdf?ixlib=rb-0.3.5&s=542c0fc76f8c43caa82a58d1d655d280&auto=format&fit=crop&w=1649&q=80');
 
        }
+       form{padding-top:2% }
     </style>
   </head>
   <body>
@@ -20,7 +21,7 @@
               <div class="row">
                 <div class="col-md-6 mb-3">
                   <label for="validationServer01">Restaurant's Name:</label>
-                  <input type="text" class="form-control is-valid" id="validationServer01" name="restaurant" value="Sardine" required>
+                  <input type="text" class="form-control is-valid" id="validationServer01" name="restaurant" value="The Old Fashioned" required>
                 </div>
                 <div class="col-md-3 mb-3">
                   <label class="custom-select d-block my-3">First rating:</label>
