adjusted size of chart

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <style>
-            html, body { height:100%; margin:0; padding:0 }
+            html, body { height:100%; margin:0; padding:50px }
             div { position:fixed; width:50%; height:50% }
             #NW { top:0;   left:0; padding-right: 5%; background:rgb(250, 219, 216)  }
             #NE { top:0;   left:50%; background:rgb(253, 242, 233)    }
