--- a/templates/predict.html
+++ b/templates/predict.html
@@ -58,6 +58,10 @@
                 <td>{{ neg_asp4 }}</td>
                 <td>{{ neg_desc4 }}</td>
               </tr>
+              <tr>
+                <td>{{ neg_asp5 }}</td>
+                <td>{{ neg_desc5 }}</td>
+              </tr>
             </table>
         </div>
         <div id="SE">
@@ -81,6 +85,10 @@
               <tr>
                 <td>{{ pos_asp4 }}</td>
                 <td>{{ pos_desc4 }}</td>
+              </tr>
+              <tr>
+                <td>{{ pos_asp5 }}</td>
+                <td>{{ pos_desc5 }}</td>
               </tr>
             </table>
         </div>
